--- a/#src/scss/core/_variables-icon.scss
+++ b/#src/scss/core/_variables-icon.scss
@@ -1,4 +1,4 @@
-$icon-font-family: 'icons-set' !default;
+$icon-font-family: 'icon-set' !default;
 $icon-font-path: '../fonts' !default;
 
 $icon-reviews: unquote('"\\e900"');
