--- a/#src/scss/core/_variables.scss
+++ b/#src/scss/core/_variables.scss
@@ -14,7 +14,7 @@ $font-size: 1.6rem;
 $font-family-secondary: 'Roboto Slab', sans-serif;
 $font-weight-defoult: 470;
 $font-size-defoult: 1.4rem;
-//* ----------------------------------------------------------------------------
+//* ------------------------------ [Font color] --------------------------------
 $font-color-var-name: #77faff;
 $font-color-var: #cd6dfa;
 $font-color-other-var: #e99287;
@@ -34,6 +34,8 @@ $luminescent-red: rgb(248, 0, 0);
 $luminescent-orange: rgb(255, 164, 32);
 $liquid-neon: rgb(200, 255, 0);
 $electric-lime: rgb(204, 255, 0);
+$color: #0b0813;
+$color-second: #1c153f;
 
 $black-color: #1c153f;
 $gray: #999999;
