--- a/#src/scss/section/setion-services.scss
+++ b/#src/scss/section/setion-services.scss
@@ -130,8 +130,10 @@
 	z-index: 999;
 	overflow: hidden;
 	width: 98%;
-	height: 50%;
-	position: absolute;
+	height: 100%;
+	position: fixed;
+	top: 0;
+	left: 0;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
