--- a/#src/scss/core/_variables-icon.scss
+++ b/#src/scss/core/_variables-icon.scss
@@ -1,12 +1,10 @@
 $icon-font-family: 'icon-set' !default;
 $icon-font-path: '../fonts' !default;
 
-$icon-reviews: unquote('"\\e900"');
-$icon-contacts: unquote('"\\e901"');
-$icon-achievements: unquote('"\\e902"');
-$icon-services: unquote('"\\e903"');
-$icon-head-phones: unquote('"\\e913"');
-$icon-youtube: unquote('"\\ea9d"');
+$icon-angle-left: unquote('"\\f104"');
+$icon-angle-right: unquote('"\\f105"');
+$icon-angle-up: unquote('"\\f106"');
+$icon-angle-down: unquote('"\\f107"');
 $icon-hand-shake: unquote('"\\f2b6"');
 $icon-phone-call: unquote('"\\e914"');
 $icon-volume-control-phone: unquote('"\\f2a0"');
@@ -16,6 +14,16 @@ $icon-youtube-logo: unquote('"\\f167"');
 $icon-whatsapp: unquote('"\\f232"');
 $icon-vk-brand: unquote('"\\f189"');
 $icon-telegram-fly: unquote('"\\e91b"');
+$icon-angles-left-solid: unquote('"\\e94c"');
+$icon-angles-right-solid: unquote('"\\e94f"');
+$icon-angles-up-solid: unquote('"\\e94d"');
+$icon-angles-down-solid: unquote('"\\e94e"');
+$icon-reviews: unquote('"\\e900"');
+$icon-contacts: unquote('"\\e901"');
+$icon-achievements: unquote('"\\e902"');
+$icon-services: unquote('"\\e903"');
+$icon-head-phones: unquote('"\\e913"');
+$icon-youtube: unquote('"\\ea9d"');
 $icon-location: unquote('"\\e924"');
 $icon-enve-mail: unquote('"\\e925"');
 $icon-microphone: unquote('"\\e905"');
