--- a/#src/scss/layouts/footer.scss
+++ b/#src/scss/layouts/footer.scss
@@ -1,7 +1,6 @@
 .footer {
 	// .footer__content
 	&__content {
-		@extend .gradient-services;
 		position: relative;
 		&::before {
 			content: '';
@@ -80,34 +79,32 @@
 			// .community__items
 			&__items {
 				padding: 3rem 2rem;
+
 				justify-content: space-between;
 				@include flex-align-center;
+
 				@include _490 {
 					flex-direction: column;
+					align-items: flex-start;
 					gap: 2rem;
 				}
 			}
 
 			// .community__title
 			&__title {
+				display: flex;
+				flex-wrap: wrap;
 				font-size: 1.2rem;
+				gap: 1rem;
+
 				span {
 					display: inline-block;
-					padding: 0 0.5rem 0 1rem;
-					margin-right: 1rem;
+					padding: 0.5rem 1rem;
 					background: #332764;
 					border-radius: 4px;
-					line-height: 170%;
-					@include _490 {
-						// display: block;
-					}
 				}
 
 				a {
-					@include _490 {
-						// display: block;
-						// margin-left: 1rem;
-					}
 					color: $gray;
 					&:hover {
 						color: $neon-blue;
@@ -133,7 +130,18 @@
 			// .community__link
 			&__link {
 				position: relative;
+				margin-left: 1rem;
+				display: flex;
+				align-items: center;
+				gap: 0.5rem;
+				padding: 0.5rem 0;
+				flex-wrap: nowrap;
+				transition: color 0.4s ease-in-out;
 				@extend .link_underline;
+
+				i {
+					color: $electric-lime;
+				}
 			}
 		}
 	}
@@ -311,7 +319,7 @@
 			}
 		}
 		i {
-			margin-right: 2rem;
+			margin-right: 1rem;
 		}
 
 		a {
