--- a/#src/scss/section/setion-services.scss
+++ b/#src/scss/section/setion-services.scss
@@ -132,6 +132,7 @@
 	width: 98%;
 	height: 100%;
 	position: fixed;
+	opacity: 0;
 	top: 0;
 	left: 0;
 	display: flex;
@@ -144,7 +145,7 @@
 	}
 
 	&__square {
-		border-bottom: 10px solid $neon-blue;
+		border-bottom: 5px solid $neon-fuchsia;
 		position: relative;
 		display: flex;
 		align-items: center;
