--- a/#src/scss/layouts/header.scss
+++ b/#src/scss/layouts/header.scss
@@ -89,7 +89,7 @@
 					margin-right: 0.8rem;
 				}
 				&:nth-child(2) {
-					color: $laser-lemon;
+					color: $electric-lime;
 					font-size: 2.4rem;
 					text-transform: none;
 				}
