--- a/#src/pug/layouts/app_layout.pug
+++ b/#src/pug/layouts/app_layout.pug
@@ -35,5 +35,7 @@ html(lang="ru")
 						block main-content
 							block section
 							block footer
+					block menu-float
+						include ../partials/menu-float
 		script(defer="defer" type="text/javascript" src="@@webRoot/js/animated.min.js")
 		script(defer="defer" type="text/javascript" src="@@webRoot/js/main.min.js")
