--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -72,7 +72,7 @@
 // todo -------------------------- Sections ------------------------------------
 @import 'section/section-mainslide';
 @import 'section/setion-services';
-// @import 'section/section-project';
+@import 'section/menu-float';
 // @import 'section/section-aboute';
 // @import 'section/section-terminal';
 // @import 'section/section-swiper';
