--- a/#src/scss/layouts/footer.scss
+++ b/#src/scss/layouts/footer.scss
@@ -23,7 +23,6 @@
 	// .footer__content-info
 	&__content-info {
 		margin-bottom: 6rem;
-		padding: 0 2rem;
 		display: grid;
 		grid-template-columns: 1fr 1fr 1fr;
 		gap: 4rem;
@@ -78,7 +77,7 @@
 		.community {
 			// .community__items
 			&__items {
-				padding: 3rem 2rem;
+				padding: 5rem 0 13rem;
 
 				justify-content: space-between;
 				@include flex-align-center;
@@ -163,21 +162,6 @@
 				height: 90%;
 			}
 		}
-
-		p {
-			color: $gray;
-			font-size: 1.4rem;
-			&:nth-child(2) {
-				color: $neon-blue-dark;
-			}
-			&:nth-child(3) {
-				color: $gray;
-			}
-
-			&:not(:last-child) {
-				margin-bottom: 1.5rem;
-			}
-		}
 	}
 
 	// .content-info__body
@@ -191,6 +175,21 @@
 	// .content-info__text
 	&__text {
 		padding: 2rem 0;
+
+		p {
+			color: $gray;
+			font-size: 1.4rem;
+			&:nth-child(1) {
+				color: $neon-blue-dark;
+			}
+			&:nth-child(2) {
+				color: $gray;
+			}
+
+			&:not(:last-child) {
+				margin-bottom: 1.5rem;
+			}
+		}
 	}
 
 	// .content-info__footer
@@ -289,11 +288,11 @@
 .contacts {
 	// .contacts__contacts
 	&__items {
-		padding: 0 2rem;
 		display: grid;
 		grid-template-columns: repeat(3, auto);
 		justify-content: start;
 		text-shadow: 2px 2px 4px #000;
+
 		@include _768 {
 			grid-template-columns: repeat(2, auto);
 			gap: 2rem;
@@ -318,7 +317,7 @@
 			}
 		}
 		i {
-			margin-right: 1rem;
+			margin-right: 1.5rem;
 		}
 
 		a {
