--- a/#src/scss/layouts/header.scss
+++ b/#src/scss/layouts/header.scss
@@ -60,7 +60,7 @@
 	&__column {
 		@include flex-align-center;
 		@include _768 {
-			&:nth-child(3) {
+			&:nth-child(2) {
 				display: none;
 			}
 		}
@@ -118,7 +118,6 @@
 		position: relative;
 		text-shadow: 1px 1px 2px #000;
 		opacity: 0;
-		transition: color 0.5s ease-in-out;
 
 		&:not(:last-child) {
 			margin-right: 2rem;
@@ -144,25 +143,7 @@
 				width: 40%;
 			}
 		}
-		&::before,
-		&::after {
-			content: '';
-			position: absolute;
-			width: 0;
-			height: 1px;
-			background-color: $electric-lime;
-			transition: width 0.5s ease-in-out;
-		}
-
-		&::before {
-			right: 0;
-			bottom: 0;
-		}
-
-		&::after {
-			bottom: -3px;
-			left: 0;
-		}
+		@extend .link_underline;
 	}
 
 	// .header__community
@@ -172,12 +153,14 @@
 
 	// .header__ellipsis
 	&__ellipsis {
+		position: relative;
 		padding: 2rem;
 		display: none;
-		margin-left: 3rem;
 
 		display: flex;
 		align-items: center;
+		justify-content: center;
+
 		@include _min-920 {
 			display: none;
 		}
@@ -208,7 +191,7 @@
 				left: 50%;
 				margin-left: -3px;
 				border-radius: 50%;
-				transition: 0.3s all ease;
+				transition: 0.4s all ease;
 			}
 
 			&::before {
@@ -221,6 +204,7 @@
 				margin-top: 3px;
 			}
 		}
+
 		&._active {
 			span {
 				transform: scale(0.7);
