--- a/#src/pug/layouts/app_layout.pug
+++ b/#src/pug/layouts/app_layout.pug
@@ -36,6 +36,7 @@ html(lang="ru")
 							block section
 							block footer
 					block menu-float
-						include ../partials/menu-float
+						._menu-float 
+							//- include ../partials/menu-float
 		script(defer="defer" type="text/javascript" src="@@webRoot/js/animated.min.js")
 		script(defer="defer" type="text/javascript" src="@@webRoot/js/main.min.js")
