--- a/#src/pug/pages/index.pug
+++ b/#src/pug/pages/index.pug
@@ -8,8 +8,8 @@ block main-content
 			div(class="material-parallax parallax")
 				div(class="parallax__image")
 					img(src="./img/body/parallax_bg.png", alt="parallax-bg")
-					block equalizer
-						include ../partials/block-equalizer
+					//- block equalizer
+					//- 	include ../partials/block-equalizer
 			block section
 				section._slide  
 				section._services  
