--- a/#src/scss/section/setion-services.scss
+++ b/#src/scss/section/setion-services.scss
@@ -44,7 +44,7 @@
 		}
 
 		&:nth-child(1) {
-			margin: -3rem 0 6rem;
+			margin: 6rem 0 4rem;
 			@include _690 {
 				font-size: 5.1rem;
 				margin: -2rem 0 6rem;
@@ -77,7 +77,7 @@
 
 	// .services__content
 	&__content {
-		padding: 4rem 2rem;
+		// padding: 4rem;
 		width: 100%;
 		overflow: hidden;
 	}
@@ -166,8 +166,7 @@
 	// .content-box__body
 	&__body {
 		position: relative;
-		padding: 2rem 0;
-		margin-bottom: 4rem;
+		margin: 12rem;
 		gap: 2.5rem;
 		display: flex;
 		justify-content: space-between;
