--- a/#src/scss/section/setion-services.scss
+++ b/#src/scss/section/setion-services.scss
@@ -166,7 +166,7 @@
 	// .content-box__body
 	&__body {
 		position: relative;
-		margin: 12rem;
+		margin: 12rem 0;
 		gap: 2.5rem;
 		display: flex;
 		justify-content: space-between;
