--- a/#src/pug/pages/index.pug
+++ b/#src/pug/pages/index.pug
@@ -12,6 +12,7 @@ block main-content
 					//- 	include ../partials/block-equalizer
 			block section
 				section._slide  
-				section._services  
+				section._services 
+				section._template 
 			block footer
 				._footer 
