--- a/#src/scss/pages/page.scss
+++ b/#src/scss/pages/page.scss
@@ -102,4 +102,10 @@
 		z-index: 9;
 		@extend .gradient-services;
 	}
+
+	//.main-content__template
+	&__template {
+		position: relative;
+		z-index: 99;
+	}
 }
