--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -10,10 +10,7 @@
 @import 'core/ui';
 //todo ------------------------- Default fonts ---------------------------------
 // &display=swap&subset=cyrillic-ext
-@import url(https://fonts.googleapis.com/css?family=Architects+Daughter:regular);
-@import url(https://fonts.googleapis.com/css?family=Roboto:300,regular,400,500,700&display=swap&subset=cyrillic-ext);
-@import url(https://fonts.googleapis.com/css?family=Roboto+Slab:100,200,300,regular,500,600,700,800,900&display=swap&subset=cyrillic-ext);
-@import url(https://fonts.googleapis.com/css?family=Fira+Code:300,regular,500,600,700&display=swap&subset=cyrillic-ext);
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap&subset=cyrillic-ext');
 // todo --------------------------- Fonts --------------------------------------
 @import 'core/fonts';
 //todo  ------------------------ Icon Fonts ------------------------------------
