--- a/#src/scss/layouts/bem-block.scss
+++ b/#src/scss/layouts/bem-block.scss
@@ -1,10 +1,13 @@
-.editor > .editor__section:not(._active) {
-	position: absolute;
-	opacity: 0;
-	transform: rotate(360deg) scale(0);
-	transition: all 0.4s ease-in-out;
+.swiper-wrapper > .swiper-slide:not(.swiper-slide-active) {
+	.main-slide__title {
+		transition: opacity 0.9s ease-in-out;
+		opacity: 0 !important;
+	}
+	.main-slide__text {
+		transition: opacity 0.9s ease-in-out;
+		opacity: 0 !important;
+	}
 }
-
 .community {
 	// .community__icon
 	&__icon {
