--- a/#src/pug/pages/index.pug
+++ b/#src/pug/pages/index.pug
@@ -2,17 +2,27 @@ extends ../layouts/app_layout
 block title
 	- var text='Студия зувукозаписи "Gusli" Обнинск' 
 
-block main-content 
-	.main-content#wrapper 
-		._content#content
-			div(class="material-parallax parallax")
-				div(class="parallax__image")
-					img(src="./img/body/parallax_bg.png", alt="parallax-bg")
-					//- block equalizer
-					//- 	include ../partials/block-equalizer
-			block section
-				section._slide  
-				section._services 
-				section._template 
-			block footer
-				._footer 
+
+block page
+	.page
+		block header
+			._header  
+			._fade-in.bp-1
+		._main-content
+			block main-content 
+				main.main-content#wrapper 
+					._content#content
+						div(class="material-parallax parallax")
+							div(class="parallax__image")
+								img(src="./img/body/parallax_bg.png", alt="parallax-bg")
+								block equalizer
+									._equalizer
+										//- include ../partials/block-equalizer
+						block section
+							section._slide  
+							section._services 
+							//- section._template 
+						block footer
+							._footer 
+			block mobile-menu
+				._menu-float 
