--- a/#src/scss/pages/page.scss
+++ b/#src/scss/pages/page.scss
@@ -12,12 +12,6 @@
 		height: 10rem;
 	}
 
-	// .page__header-wrapper
-	&__header-wrapper {
-		width: 100%;
-		height: 100%;
-	}
-
 	// .page__fade-in
 	&__fade-in {
 		@include _920 {
@@ -104,8 +98,21 @@
 	}
 
 	//.main-content__template
-	&__template {
-		position: relative;
-		z-index: 99;
+	// &__template {
+	// 	position: relative;
+	// 	z-index: 99;
+	// }
+	// .main-content__equalizer
+	&__equalizer {
+		position: absolute;
+		height: 100%;
+		width: 100%;
+		top: 100px;
+		bottom: 200px;
+		margin: auto;
+		left: -1;
+		right: -1;
+		display: flex;
+		align-items: center;
 	}
 }
