--- a/#src/scss/section/section-mainslide.scss
+++ b/#src/scss/section/section-mainslide.scss
@@ -77,7 +77,7 @@
 	&__content {
 		position: absolute;
 		padding: 0 2rem;
-		max-width: 96rem;
+		max-width: 100rem;
 		flex-direction: column;
 		@include flex-align-center-justify-center;
 
@@ -86,11 +86,11 @@
 
 	// .main-slide__title
 	&__title {
+		padding-right: 5rem;
 		width: 100%;
 		transition: all 0.9s ease-in-out;
 		text-shadow: 1px 1px 7pt #000;
 		text-align: left;
-		padding: 0 6rem 0 2rem;
 
 		font: {
 			size: 3.6rem;
@@ -109,10 +109,9 @@
 
 	// .main-slide__text
 	&__text {
-		opacity: 0;
+		padding-right: 5rem;
 		transition: all 0.7s ease-in-out;
 		text-align: left;
-		padding: 0 6rem 0 2rem;
 		text-shadow: 0px 0px 5px $neon-blue-dark;
 	}
 
